--- a/.ci/jenkins/lib/build-matrix.yaml
+++ b/.ci/jenkins/lib/build-matrix.yaml
@@ -22,6 +22,10 @@
 ---
 job: nixl-ci-non-gpu
 
+registry_host: nbu-harbor.gtm.nvidia.com
+registry_auth: nixl_harbor_credentials
+registry_path: /nixl
+
 # Fail job if one of the steps fails or continue
 failFast: false
 
@@ -33,10 +37,25 @@ kubernetes:
   limits: "{memory: 8Gi, cpu: 8000m}"
   requests: "{memory: 8Gi, cpu: 8000m}"
 
+env:
+  NIXL_INSTALL_DIR: /opt/nixl
+  TEST_TIMEOUT: 30
+  UCX_TLS: "^shm"
+  CI_REV: "20251217-1"
+
 runs_on_dockers:
-  - { name: "ubuntu24.04-cuda12-dl-base", url: "nvcr.io/nvidia/cuda-dl-base:25.06-cuda12.9-devel-ubuntu24.04" }
-  - { name: "ubuntu24.04-cuda13-dl-base", url: "nvcr.io/nvidia/cuda-dl-base:25.10-cuda13.0-devel-ubuntu24.04" }
-  - { name: "ubuntu22.04-cuda-dl-base", url: "nvidia/cuda:13.0.1-devel-ubuntu22.04" }
+  - {
+     file: '.ci/dockerfiles/Dockerfile.ci', name: 'cuda-25.06-cuda12.9', tag: "${CI_REV}",
+     build_args: '--build-arg image_ver=nvcr.io/nvidia/cuda-dl-base:25.06-cuda12.9-devel-ubuntu24.04 --build-arg nixl_install_dir=${NIXL_INSTALL_DIR} --pull --no-cache'
+    }
+  - {
+     file: '.ci/dockerfiles/Dockerfile.ci', name: 'cuda-25.10-cuda13.0', tag: "${CI_REV}",
+     build_args: '--build-arg image_ver=nvcr.io/nvidia/cuda-dl-base:25.10-cuda13.0-devel-ubuntu24.04 --build-arg nixl_install_dir=${NIXL_INSTALL_DIR} --pull --no-cache'
+    }
+  - {
+     file: '.ci/dockerfiles/Dockerfile.ci', name: 'cuda-13.0.1', tag: "${CI_REV}",
+     build_args: '--build-arg image_ver=nvidia/cuda:13.0.1-devel-ubuntu22.04 --build-arg nixl_install_dir=${NIXL_INSTALL_DIR} --pull --no-cache'
+    }
   - { name: "podman-v5.6.2", url: "quay.io/podman/stable:v5.6.2", category: 'tool', privileged: true }
 
 matrix:
@@ -45,16 +64,7 @@ matrix:
       - x86_64
       - aarch64
 
-env:
-  NIXL_INSTALL_DIR: /opt/nixl
-  TEST_TIMEOUT: 30
-  UCX_TLS: "^shm"
-
 steps:
-  - name: Build
-    parallel: false
-    run: |
-      .gitlab/build.sh ${NIXL_INSTALL_DIR}
 
   - name: Test CPP
     parallel: false
